welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:21: error: ')' expected but '}' found.
  gauche()}
          ^